--- a/HWYZ/Views/Couriers/List.cshtml
+++ b/HWYZ/Views/Couriers/List.cshtml
@@ -7,6 +7,7 @@
     <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
+                <td style="width: 4%;">序号</td>
                 <td>送餐员姓名</td>
                 <td>送餐员电话</td>
                 @if (UserContext.store == null)
@@ -25,10 +26,12 @@
             </tr>
         </thead>
         <tbody>
+            @{ int i = 0;}
             @{
                 foreach (Courier item in Model)
                 {
                 <tr>
+                    <td class="table-serial">@(Model.StartItemIndex + i++)</td>
                     <td>@item.CourierName</td>
                     <td>@item.CourierTel</td>
                     @if (UserContext.store == null)
