--- a/HWYZ/Views/Locations/List.cshtml
+++ b/HWYZ/Views/Locations/List.cshtml
@@ -7,6 +7,7 @@
     <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
+                <td style="width: 4%;">序号</td>
                 <td>客户姓名</td>
                 <td>客户电话</td>
                 <td>客户地址</td>
@@ -21,10 +22,12 @@
             </tr>
         </thead>
         <tbody>
+            @{ int i = 0;}
             @{
                 foreach (Location item in Model)
                 {
                 <tr>
+                    <td class="table-serial">@(Model.StartItemIndex + i++)</td>
                     <td>@item.Customer</td>
                     <td>@item.CustomerTel</td>
                     <td>@item.Address</td>
