--- a/HWYZ/Views/ProductNumber/List.cshtml
+++ b/HWYZ/Views/ProductNumber/List.cshtml
@@ -6,6 +6,7 @@
     <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
+                <td style="width: 4%;">序号</td>
                 <td>商品名称</td>
                 <td>商品编号</td>
                 <td>线上分配数量</td>
@@ -15,10 +16,12 @@
             </tr>
         </thead>
         <tbody>
+            @{ int i = 0;}
             @{
                 foreach (StoreProduct item in Model)
                 {
                 <tr>
+                    <td class="table-serial">@(Model.StartItemIndex + i++)</td>
                     <td>@item.Product.ProductName</td>
                     <td>@item.Product.ProductCode</td>
                     <td>@item.ProductNumber</td>
