--- a/HWYZ/Views/Roles/List.cshtml
+++ b/HWYZ/Views/Roles/List.cshtml
@@ -4,16 +4,19 @@
     <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
+                <td style="width: 4%;">序号</td>
                 <td>角色名称</td>
                 <td>状态</td>
                 <td>操作</td>
             </tr>
         </thead>
         <tbody>
+            @{ int i = 1;}
             @{
                 foreach (GuserRole item in Model)
                 {
                 <tr>
+                    <td class="table-serial">@(i++)</td>
                     <td>@item.RoleName</td>
                     @if (@item.Status == Status.enable)
                     {
