--- a/HWYZ/Views/Users/List.cshtml
+++ b/HWYZ/Views/Users/List.cshtml
@@ -6,6 +6,7 @@
     <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
+                <td style="width: 4%;">序号</td>
                 <td>用户编号</td>
                 <td>用户姓名</td>
                 <td>身份证号</td>
@@ -16,10 +17,12 @@
             </tr>
         </thead>
         <tbody>
+            @{ int i = 0;}
             @{
                 foreach (Guser item in Model)
                 {
                 <tr>
+                    <td class="table-serial">@(Model.StartItemIndex + i++)</td>
                     <td>@item.Account</td>
                     <td>@item.DisplayName</td>
                     <td>@item.CardNumber</td>
