--- a/HWYZ/Views/Home/Index.cshtml
+++ b/HWYZ/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 </div>
                 <div class="panel-footer" style="padding: 0 0 5px 0;">
                     <span>
-                        <a href="javascript:void(0)">
+                        <a href="javascript:void(0)" data-toggle="modal" data-target="#dlg_sale">
                             <h3>
                                 <i class="fa fa-tv"></i>&nbsp;&nbsp;营业金额
                             </h3>
@@ -38,6 +38,37 @@
                 </div>
             </div>
         </div>
+        
+        <div class="modal fade" id="dlg_sale" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="panel  panel-default">
+                    <div class="panel-header">
+                        <h3>昨日营业金额TOP3</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row top-3 top-no-1">
+                            <div class="col-md-3 col-sm-3"></div>
+                            <div class="col-md-9 col-sm-9">
+                                <h3>合肥总店 营业额：10000 元</h3>
+                            </div>
+                        </div>
+                        <div class="row top-3 top-no-2">
+                            <div class="col-md-3 col-sm-3"></div>
+                            <div class="col-md-9 col-sm-9">
+                                <h3>合肥总店 营业额：9000 元</h3>
+                            </div>
+                        </div>
+                        <div class="row top-3 top-no-3">
+                            <div class="col-md-3 col-sm-3"></div>
+                            <div class="col-md-9 col-sm-9">
+                                <h3>合肥总店 营业额：8000 元</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <div class="col-md-3 col-sm-3">
             <div class="panel  panel-default" style="text-align: center;">
                 <div class="panel-body">
@@ -225,6 +256,7 @@
     <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     </div>
 </div>
+
 
 @{Html.RegisterMvcPagerScriptResource();}
 @Scripts.Render("~/Scripts/Page/home.js")
