完善首页营业额弹窗

--- a/HWYZ/Content/base.css
+++ b/HWYZ/Content/base.css
@@ -126,3 +126,5 @@ footer.duomi-page-footer .list-inline a, footer.authenticated-footer .list-inlin
 .top-no-2 { background-position: -203px -247px; border-bottom: 0; }
 
 .top-no-3 { background-position: -203px -385px; }
+
+.top-text { text-align: center; }
