--- a/HWYZ/Views/Order/Index.cshtml
+++ b/HWYZ/Views/Order/Index.cshtml
@@ -62,6 +62,7 @@
                                     }
                                     <option value="BeforeSend">待发货</option>
                                     <option value="Sended">已发货</option>
+                                    <option value="Checked">已对账</option>
                                     <option value="Reject">驳回</option>
                                 </select>
                             </div>
