--- a/HWYZ/Views/Order/List.cshtml
+++ b/HWYZ/Views/Order/List.cshtml
@@ -48,7 +48,7 @@
                     {
                         case OrderStatus.BeforeSubmit:<td><span class="label label-warning label-mini">待提交</span></td>; break;
                         case OrderStatus.BeforeSend:<td><span class="label label-info label-mini">待发货</span></td>; break;
-                        case OrderStatus.Sended:<td><span class="label label-warning label-mini">已发货</span></td>; break;
+                        case OrderStatus.Sended:<td><span class="label label-primary label-mini">已发货</span></td>; break;
                         case OrderStatus.Checked:<td><span class="label label-success label-mini">已对账</span></td>; break;
                         case OrderStatus.Reject:<td><span class="label label-danger label-mini">驳回</span></td>; break;
                     }
